# CUDAExperiments

./: .clang-format  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  publishDocs.sh
.github/workflows/: build.yml
cmake/: Packages.cmake
cmake/macros/: Private.cmake  Public.cmake
experiments/copyArray/: CMakeLists.txt  copyArray.cu  copyArray.h  main.cpp
experiments/matrixArrayOps/: CMakeLists.txt  main.cpp  matrixArrayProduct.cu  matrixArrayProduct.h  valueTypes.h
experiments/matrixArrayProduct/: CMakeLists.txt  main.cpp  matrixArrayProduct.cu  matrixArrayProduct.h
experiments/queryDeviceProperties/: CMakeLists.txt  main.cpp
lib/cudaExperiments/: CMakeLists.txt  error.h  math.h  performance.h  valueTypes.h
src/: CMakeLists.txt  CUDAExperiments.md  README.md
src/copyArray/: CMakeLists.txt  copyArray.cu  copyArray.h  main.cpp
src/cubase/: CMakeLists.txt  error.h  performance.h
src/cudaTools/: CMakeLists.txt  diagnostic.h  error.h  performance.h
src/experiments/copyArray/: CMakeLists.txt  main.cpp
src/experiments/matrixArrayProduct/: CMakeLists.txt  main.cpp
src/experiments/queryDeviceProperties/: CMakeLists.txt  main.cpp
src/functionPtr/: main.cu
src/globalVarAccess/: CMakeLists.txt  main.cu
src/mallocPitch/: CMakeLists.txt  main.cu
src/matrixArrayProduct/: CMakeLists.txt  main.cpp  matrixArrayProduct.h
src/multiContextArray/: allocate.h  deallocate.h  falseType.h  fill.h  index.h
src/multiContextArray/tests/: testArray.cpp
src/multiDeviceArray/: CMakeLists.txt  array.h  compare.h  copy.h  residency.h  typeName.h
src/multiDeviceArray/tests/: CMakeLists.txt
src/persistingL2/: main.cu
src/queryDeviceProperties/: CMakeLists.txt  README.md  main.cpp
src/sharedMemory/: main.cu
src/stream/: main.cu
utils/: CMakeLists.txt  cudaUtils.h  mathUtils.h
